--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ ksp = "2.1.20-RC-1.0.30"
 detekt = "1.23.8"
 npm-publish = "3.5.3"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.28"
+kilua-rpc = "0.0.29"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.1"
@@ -18,9 +18,9 @@ kotlinx-datetime = "0.6.2"
 kotlinx-browser = "0.3"
 javalin = "6.4.0"
 jooby = "3.6.1"
-ktor = "3.1.0"
+ktor = "3.1.1"
 koin = "4.1.0-Beta5"
-koin-annotations = "2.0.0-RC5"
+koin-annotations = "2.0.0"
 micronaut = "4.7.6"
 micronaut-plugins = "4.4.5"
 spring-boot = "3.4.3"
@@ -56,7 +56,7 @@ marked = "15.0.7"
 sanitize-html = "2.14.0"
 postcss = "8.5.3"
 postcss-loader = "8.1.1"
-tailwindcss = "4.0.8"
+tailwindcss = "4.0.9"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
 motion = "12.4.7"
