--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ kotlin.js.yarn=false
 
 kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
-ksp.useKSP2=false
+ksp.useKSP2=true
 kapt.use.k2=true
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
