--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 kilua = "0.0.21"
 kilua-published = "0.0.21"
-kotlin = "2.1.20-RC"
-compose = "1.8.0-alpha03"
+kotlin = "2.1.20-RC2"
+compose = "1.8.0-alpha04"
 dokka = "2.0.0"
 nmcp = "0.0.8"
-ksp = "2.1.20-RC-1.0.30"
+ksp = "2.1.20-RC2-1.0.31"
 detekt = "1.23.8"
 npm-publish = "3.5.3"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.29"
+kilua-rpc = "0.0.30"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.1"
@@ -22,14 +22,14 @@ ktor = "3.1.1"
 koin = "4.1.0-Beta5"
 koin-annotations = "2.0.0"
 micronaut = "4.7.6"
-micronaut-plugins = "4.4.5"
+micronaut-plugins = "4.5.0"
 spring-boot = "3.4.3"
 spring-dependency-management = "1.1.7"
 vertx = "5.0.0.CR5"
 vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "9.0.0-beta9"
-logback = "1.5.16"
+shadow = "9.0.0-beta10"
+logback = "1.5.17"
 tomlj = "1.1.1"
 kaml = "0.72.0"
 resources-optimizer = "2.6.5"
@@ -46,7 +46,7 @@ bootstrap-icons = "1.11.3"
 fontawesome = "6.7.2"
 trix = "2.1.12"
 toastify = "1.12.0"
-tempus-dominus = "6.9.11"
+tempus-dominus = "6.10.1"
 tom-select = "2.4.3"
 imask = "7.6.1"
 tabulator = "6.3.1"
@@ -56,10 +56,10 @@ marked = "15.0.7"
 sanitize-html = "2.14.0"
 postcss = "8.5.3"
 postcss-loader = "8.1.1"
-tailwindcss = "4.0.9"
+tailwindcss = "4.0.12"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.4.7"
+motion = "12.4.10"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
