--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,35 @@
 [versions]
 kilua = "0.0.21"
 kilua-published = "0.0.21"
-kotlin = "2.1.20-RC2"
-compose = "1.8.0-alpha04"
+kotlin = "2.1.20"
+compose = "1.8.0-beta01"
 dokka = "2.0.0"
 nmcp = "0.0.8"
-ksp = "2.1.20-RC2-1.0.31"
+ksp = "2.1.20-1.0.31"
 detekt = "1.23.8"
 npm-publish = "3.5.3"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.30"
+kilua-rpc = "0.0.31-SNAPSHOT"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.1"
 kotlinx-serialization = "1.8.0"
 kotlinx-datetime = "0.6.2"
-kotlinx-browser = "0.3"
-javalin = "6.4.0"
+wrappers = "2025.3.17"
+javalin = "6.5.0"
 jooby = "3.6.1"
 ktor = "3.1.1"
 koin = "4.1.0-Beta5"
 koin-annotations = "2.0.0"
 micronaut = "4.7.6"
 micronaut-plugins = "4.5.0"
-spring-boot = "3.4.3"
-spring-dependency-management = "1.1.7"
+spring-boot = "3.4.4"
 vertx = "5.0.0.CR5"
-vertx-plugin = "1.4.0"
 ballast = "4.2.1"
-shadow = "9.0.0-beta10"
-logback = "1.5.17"
+shadow = "9.0.0-beta11"
+logback = "1.5.18"
 tomlj = "1.1.1"
-kaml = "0.72.0"
+kaml = "0.73.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.19"
@@ -44,22 +42,22 @@ popperjs-core = "2.11.8"
 bootstrap = "5.3.3"
 bootstrap-icons = "1.11.3"
 fontawesome = "6.7.2"
-trix = "2.1.12"
+trix = "2.1.13"
 toastify = "1.12.0"
-tempus-dominus = "6.10.1"
+tempus-dominus = "6.10.2"
 tom-select = "2.4.3"
 imask = "7.6.1"
 tabulator = "6.3.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
 marked = "15.0.7"
-sanitize-html = "2.14.0"
+sanitize-html = "2.15.0"
 postcss = "8.5.3"
 postcss-loader = "8.1.1"
-tailwindcss = "4.0.12"
+tailwindcss = "4.0.15"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.4.10"
+motion = "12.5.0"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
@@ -67,7 +65,7 @@ kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core",
 kotlinx-coroutines-reactor = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactor", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
-kotlinx-browser = { module = "org.jetbrains.kotlinx:kotlinx-browser", version.ref = "kotlinx-browser" }
+wrappers-browser = { module = "org.jetbrains.kotlin-wrappers:kotlin-browser", version.ref = "wrappers" }
 ksp-symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 javalin = { module = "io.javalin:javalin", version.ref = "javalin" }
 jooby-kotlin = { module = "io.jooby:jooby-kotlin", version.ref = "jooby" }
@@ -112,9 +110,7 @@ nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
 kilua-rpc = { id = "dev.kilua.rpc", version.ref = "kilua-rpc" }
 gradle-plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "gradle-plugin-publish" }
 kilua = { id = "dev.kilua", version.ref = "kilua-published" }
-spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
 jooby = { id = "io.jooby.run", version.ref = "jooby" }
-vertx = { id = "io.vertx.vertx-plugin", version.ref = "vertx-plugin" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 micronaut-application = { id = "io.micronaut.application", version.ref = "micronaut-plugins" }
