Possibility to configure SSR cache time

--- a/examples/realworld/src/jvmMain/resources/application.conf
+++ b/examples/realworld/src/jvmMain/resources/application.conf
@@ -23,5 +23,5 @@ ssr {
 #  externalSsrService = "http://localhost:7788"
 #  rpcUrlPrefix = "http://localhost:8080"
 #  rootId = "root"
-#  noCache = true
+#  cacheTime = 10
 }
