--- a/examples/ssr-ktor/src/jvmMain/resources/application.conf
+++ b/examples/ssr-ktor/src/jvmMain/resources/application.conf
@@ -24,5 +24,5 @@ ssr {
 #  rpcUrlPrefix = "http://localhost:8080"
 #  rootId = "root"
 #  contextPath = "/"
-#  noCache = false
+#  cacheTime = 10
 }
