--- a/examples/ssr-vertx/src/jvmMain/resources/application.properties
+++ b/examples/ssr-vertx/src/jvmMain/resources/application.properties
@@ -4,4 +4,4 @@ ssr.nodeExecutable=/home/rjaros/Programs/node/bin/node
 #  ssr.rpcUrlPrefix=http://localhost:8080
 #  ssr.rootId=root
 #  ssr.contextPath=/
-#  ssr.noCache=false
+#  ssr.cacheTime=10
