--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ ksp = "2.1.20-1.0.32"
 detekt = "1.23.8"
 npm-publish = "3.5.3"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.31-SNAPSHOT"
+kilua-rpc = "0.0.31"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.1"
