--- a/templates/template/gradle.properties
+++ b/templates/template/gradle.properties
@@ -7,3 +7,5 @@ org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 
 kotlin.mpp.stability.nowarn=true
 kotlin.code.style=official
+ksp.useKSP2=true
+kotlin.js.ir.output.granularity=per-file
