--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 kilua = "0.0.22"
 kilua-published = "0.0.22"
-kotlin = "2.1.20"
-compose = "1.8.0-beta01"
+kotlin = "2.2.0-Beta1"
+compose = "1.8.0-beta02"
 dokka = "2.0.0"
 nmcp = "0.0.8"
-ksp = "2.1.20-1.0.32"
+ksp = "2.2.0-Beta1-2.0.0"
 detekt = "1.23.8"
 npm-publish = "3.5.3"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.31"
+kilua-rpc = "0.0.32"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
-kotlinx-coroutines = "1.10.1"
+kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.8.1"
 kotlinx-datetime = "0.6.2"
-wrappers = "2025.4.6"
-javalin = "6.5.0"
+wrappers = "2025.4.16"
+javalin = "6.6.0"
 jooby = "3.7.0"
 ktor = "3.1.2"
-koin = "4.1.0-Beta6"
-koin-annotations = "2.0.0"
-micronaut = "4.7.6"
-micronaut-plugins = "4.5.0"
+koin = "4.1.0-Beta7"
+koin-annotations = "2.0.1-Beta1"
+micronaut = "4.8.2"
+micronaut-plugins = "4.5.3"
 spring-boot = "3.4.4"
-vertx = "5.0.0.CR5"
+vertx = "5.0.0.CR6"
 ballast = "4.2.1"
 shadow = "9.0.0-beta12"
 logback = "1.5.18"
 tomlj = "1.1.1"
-kaml = "0.74.0"
+kaml = "0.77.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.19"
@@ -44,20 +44,20 @@ bootstrap-icons = "1.11.3"
 fontawesome = "6.7.2"
 trix = "2.1.13"
 toastify = "1.12.0"
-tempus-dominus = "6.10.2"
+tempus-dominus = "6.10.3"
 tom-select = "2.4.3"
 imask = "7.6.1"
 tabulator = "6.3.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "15.0.7"
-sanitize-html = "2.15.0"
+marked = "15.0.8"
+sanitize-html = "2.16.0"
 postcss = "8.5.3"
 postcss-loader = "8.1.1"
-tailwindcss = "4.1.3"
+tailwindcss = "4.1.4"
 cssnano = "7.0.6"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.6.3"
+motion = "12.7.4"
 
 [libraries]
 kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "kotlinx-atomicfu" }
