Upgraded dependencies (Kotlin 2.2.0-RC, Compose 1.8.1, nmcp 0.1.5, KSP 2.0.1, npm-publish 4.0.4, Kilua RCP 0.0.34, kotlin-wrappers 2025.5.8, Jooby 3.8.1, Ktor 3.1.3, Koin 4.1.0-Beta11, Spring Boot 3.5.0, Vert.x 5.0.0, Shadow 9.0.0-beta13, kaml 0.78.0, Bootstrap 5.3.6, Bootstrap icons 1.13.1, Trix 2.1.15, Tempsus Dominus 6.10.4, Marked 15.0.12, sanitize-html 2.17.0, TailwindCSS 4.1.7, cssnano 7.0.7, Motion 12.12.2, Gradle 8.14.1)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,35 @@
 [versions]
 kilua = "0.0.24"
 kilua-published = "0.0.24"
-kotlin = "2.2.0-Beta1"
-compose = "1.8.0-rc01"
+kotlin = "2.2.0-RC"
+compose = "1.8.1"
 dokka = "2.0.0"
-nmcp = "0.1.2"
-ksp = "2.2.0-Beta1-2.0.0"
+nmcp = "0.1.5"
+ksp = "2.2.0-RC-2.0.1"
 detekt = "1.23.8"
-npm-publish = "3.5.3"
+npm-publish = "4.0.4"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.33"
+kilua-rpc = "0.0.34"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.27.0"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.8.1"
 kotlinx-datetime = "0.6.2"
-wrappers = "2025.4.16"
+wrappers = "2025.5.8"
 javalin = "6.6.0"
-jooby = "3.7.0"
-ktor = "3.1.2"
-koin = "4.1.0-Beta7"
+jooby = "3.8.1"
+ktor = "3.1.3"
+koin = "4.1.0-Beta11"
 koin-annotations = "2.0.1-Beta1"
 micronaut = "4.8.2"
 micronaut-plugins = "4.5.3"
-spring-boot = "3.4.5"
-vertx = "5.0.0.CR7"
+spring-boot = "3.5.0"
+vertx = "5.0.0"
 ballast = "4.2.1"
-shadow = "9.0.0-beta12"
+shadow = "9.0.0-beta13"
 logback = "1.5.18"
 tomlj = "1.1.1"
-kaml = "0.77.0"
+kaml = "0.78.0"
 resources-optimizer = "2.6.5"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.19"
@@ -39,25 +39,25 @@ imports-loader = "5.0.0"
 splitjs = "1.6.5"
 html-differ = "1.4.0"
 popperjs-core = "2.11.8"
-bootstrap = "5.3.5"
-bootstrap-icons = "1.11.3"
+bootstrap = "5.3.6"
+bootstrap-icons = "1.13.1"
 fontawesome = "6.7.2"
-trix = "2.1.13"
+trix = "2.1.15"
 toastify = "1.12.0"
-tempus-dominus = "6.10.3"
+tempus-dominus = "6.10.4"
 tom-select = "2.4.3"
 imask = "7.6.1"
 tabulator = "6.3.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "15.0.11"
-sanitize-html = "2.16.0"
+marked = "15.0.12"
+sanitize-html = "2.17.0"
 postcss = "8.5.3"
 postcss-loader = "8.1.1"
-tailwindcss = "4.1.4"
-cssnano = "7.0.6"
+tailwindcss = "4.1.7"
+cssnano = "7.0.7"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.9.2"
+motion = "12.12.2"
 leaflet = "2.0.0-alpha"
 
 [libraries]
@@ -105,7 +105,7 @@ compose-gradle-plugin = { module = "org.jetbrains.compose:compose-gradle-plugin"
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-npm-publish = { id = "dev.petuska.npm.publish", version.ref = "npm-publish" }
+npm-publish = { id = "org.danilopianini.npm.publish", version.ref = "npm-publish" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
 nmcp-aggregation = { id = "com.gradleup.nmcp.aggregation", version.ref = "nmcp" }
