--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,7 @@
 org.gradle.jvmargs=-Xmx6g
 org.gradle.parallel=true
 org.gradle.caching=true
-#org.gradle.unsafe.configuration-cache=true
-#org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.configuration-cache=false
 org.gradle.kotlin.dsl.precompiled.accessors.strict=true
 kotlin.js.yarn=false
 
