--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,36 @@
 [versions]
 kilua = "0.0.25"
 kilua-published = "0.0.25"
-kotlin = "2.2.0-RC"
-compose = "1.8.1"
+kotlin = "2.2.0"
+compose = "1.9.0-alpha03"
 dokka = "2.0.0"
-nmcp = "0.1.5"
-ksp = "2.2.0-RC-2.0.1"
+nmcp = "1.0.1"
+ksp = "2.2.0-2.0.2"
 detekt = "1.23.8"
-npm-publish = "4.0.4"
+npm-publish = "4.0.5"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.34"
+kilua-rpc = "0.0.35-SNAPSHOT"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.27.0"
+kotlinx-atomicfu = "0.29.0"
 kotlinx-coroutines = "1.10.2"
-kotlinx-serialization = "1.8.1"
-kotlinx-datetime = "0.6.2"
-wrappers = "2025.5.8"
-javalin = "6.6.0"
-jooby = "3.8.1"
-ktor = "3.1.3"
-koin = "4.1.0-Beta11"
-koin-annotations = "2.0.1-Beta1"
-micronaut = "4.8.2"
-micronaut-plugins = "4.5.3"
-spring-boot = "3.5.0"
-vertx = "5.0.0"
+kotlinx-serialization = "1.9.0"
+kotlinx-datetime = "0.7.0"
+wrappers = "2025.7.1"
+javalin = "6.7.0"
+jooby = "3.10.0"
+ktor = "3.2.1"
+koin = "4.1.0"
+koin-annotations = "2.1.0"
+micronaut = "4.9.0"
+micronaut-plugins = "4.5.4"
+spring-boot = "3.5.3"
+vertx = "5.0.1"
 ballast = "4.2.1"
-shadow = "9.0.0-beta13"
+shadow = "9.0.0-rc1"
 logback = "1.5.18"
 tomlj = "1.1.1"
-kaml = "0.78.0"
-resources-optimizer = "2.6.5"
+kaml = "0.83.0"
+resources-optimizer = "2.7.3"
 expiring-map = "0.5.11"
 npm-kilua-assets = "0.0.19"
 css-loader = "7.1.2"
@@ -39,7 +39,7 @@ imports-loader = "5.0.0"
 splitjs = "1.6.5"
 html-differ = "1.4.0"
 popperjs-core = "2.11.8"
-bootstrap = "5.3.6"
+bootstrap = "5.3.7"
 bootstrap-icons = "1.13.1"
 fontawesome = "6.7.2"
 trix = "2.1.15"
@@ -50,14 +50,14 @@ imask = "7.6.1"
 tabulator = "6.3.1"
 rsup-progress = "3.2.0"
 lz-string = "1.5.0"
-marked = "15.0.12"
+marked = "16.0.0"
 sanitize-html = "2.17.0"
-postcss = "8.5.3"
+postcss = "8.5.6"
 postcss-loader = "8.1.1"
-tailwindcss = "4.1.7"
+tailwindcss = "4.1.11"
 cssnano = "7.0.7"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.12.2"
+motion = "12.23.0"
 leaflet = "2.0.0-alpha"
 
 [libraries]
