--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,19 +9,19 @@ ksp = "2.2.0-2.0.2"
 detekt = "1.23.8"
 npm-publish = "4.0.5"
 gradle-plugin-publish = "1.3.1"
-kilua-rpc = "0.0.35-SNAPSHOT"
+kilua-rpc = "0.0.35"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.29.0"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
-kotlinx-datetime = "0.7.0"
-wrappers = "2025.7.1"
+kotlinx-datetime = "0.7.1"
+wrappers = "2025.7.3"
 javalin = "6.7.0"
 jooby = "3.10.0"
 ktor = "3.2.1"
 koin = "4.1.0"
 koin-annotations = "2.1.0"
-micronaut = "4.9.0"
+micronaut = "4.9.1"
 micronaut-plugins = "4.5.4"
 spring-boot = "3.5.3"
 vertx = "5.0.1"
@@ -57,7 +57,7 @@ postcss-loader = "8.1.1"
 tailwindcss = "4.1.11"
 cssnano = "7.0.7"
 mini-css-extract-plugin = "2.9.2"
-motion = "12.23.0"
+motion = "12.23.3"
 leaflet = "2.0.0-alpha"
 
 [libraries]
