--- a/templates/template/gradle/libs.versions.toml
+++ b/templates/template/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kilua = "0.0.25"
-kotlin = "2.2.0-RC"
-compose = "1.8.1"
+kilua = "0.0.26"
+kotlin = "2.2.0"
+compose = "1.9.0-alpha03"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
