--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kilua = "0.0.27"
-kilua-published = "0.0.27-SNAPSHOT"
+kilua-published = "0.0.26"
 kotlin = "2.2.20-RC-233"
 compose = "1.9.0-beta01"
 dokka = "2.0.0"
