--- a/templates/template/gradle/libs.versions.toml
+++ b/templates/template/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kilua = "0.0.26"
-kotlin = "2.2.0"
-compose = "1.9.0-alpha03"
+kilua = "0.0.27"
+kotlin = "2.2.20-RC2"
+compose = "1.10.0-alpha01"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
