--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ ksp = "2.3.0"
 detekt = "1.23.8"
 npm-publish = "4.1.4"
 gradle-plugin-publish = "2.0.0"
-kilua-rpc = "0.0.38-SNAPSHOT"
+kilua-rpc = "0.0.38"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.29.0"
 kotlinx-coroutines = "1.10.2"
