Upgrade templates to 0.0.28

--- a/templates/template-vite/gradle/libs.versions.toml
+++ b/templates/template-vite/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-kilua = "0.0.27"
-kotlin = "2.2.20-RC2"
-compose = "1.10.0-alpha01"
-vite-kotlin = "0.6.2"
+kilua = "0.0.28"
+kotlin = "2.3.0-Beta1"
+compose = "1.10.0-alpha03"
+vite-kotlin = "0.6.3"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
