Upgraded dependencies (Kotlin 2.3.0, Compose 1.11.0-alpha01, nmcp 1.4.3, KSP 2.3.4, Kilua RPC 0.0.41, Serialization 1.10.0-RC, kotlin-wrappers 2026.1.1, Jooby 4.0.13, Micronaut 4.10.6, Spring Boot 4.0.1, Vert.x 5.0.6, Ballast 5.0.1, logback 1.5.23, Trix 2.1.16, Tailwindcss 4.1.18, Motion 12.23.26)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
 kilua = "0.0.30"
 kilua-published = "0.0.30"
-kotlin = "2.3.0-RC"
-compose = "1.10.0-beta02"
+kotlin = "2.3.0"
+compose = "1.11.0-alpha01"
 dokka = "2.1.0"
-nmcp = "1.3.0"
-ksp = "2.3.3"
+nmcp = "1.4.3"
+ksp = "2.3.4"
 detekt = "1.23.8"
 npm-publish = "4.1.8"
 gradle-plugin-publish = "2.0.0"
-kilua-rpc = "0.0.40"
+kilua-rpc = "0.0.41"
 kilua-gettext = "0.0.2"
 kotlinx-atomicfu = "0.29.0"
 kotlinx-coroutines = "1.10.2"
-kotlinx-serialization = "1.9.0"
+kotlinx-serialization = "1.10.0-RC"
 kotlinx-datetime = "0.7.1"
-wrappers = "2025.11.12"
+wrappers = "2026.1.1"
 javalin = "6.7.0"
-jooby = "4.0.12"
+jooby = "4.0.13"
 ktor = "3.3.3"
 koin = "4.1.1"
 koin-annotations = "2.3.1"
-micronaut = "4.10.2"
+micronaut = "4.10.6"
 micronaut-plugins = "4.6.1"
-spring-boot = "4.0.0"
-vertx = "5.0.5"
-ballast = "4.2.1"
-logback = "1.5.21"
+spring-boot = "4.0.1"
+vertx = "5.0.6"
+ballast = "5.0.1"
+logback = "1.5.23"
 tomlj = "1.1.1"
 kaml = "0.104.0"
 resources-optimizer = "2.7.5"
@@ -39,7 +39,7 @@ popperjs-core = "2.11.8"
 bootstrap = "5.3.8"
 bootstrap-icons = "1.13.1"
 fontawesome = "7.1.0"
-trix = "2.1.15"
+trix = "2.1.16"
 toastify = "1.12.0"
 tempus-dominus = "6.10.4"
 tom-select = "2.4.3"
@@ -51,10 +51,10 @@ marked = "17.0.1"
 sanitize-html = "2.17.0"
 postcss = "8.5.6"
 postcss-loader = "8.2.0"
-tailwindcss = "4.1.17"
+tailwindcss = "4.1.18"
 cssnano = "7.1.2"
 mini-css-extract-plugin = "2.9.4"
-motion = "12.23.24"
+motion = "12.23.26"
 leaflet = "2.0.0-alpha.1"
 
 [libraries]
