--- a/templates/template/gradle/libs.versions.toml
+++ b/templates/template/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
-kilua = "0.0.30"
-kotlin = "2.3.0-RC"
-compose = "1.10.0-beta02"
+kilua = "0.0.31"
+kotlin = "2.3.0"
+compose = "1.11.0-alpha01"
+vite-kotlin = "0.7.1"
 
 [libraries]
 kilua = { module = "dev.kilua:kilua", version.ref = "kilua" }
@@ -12,3 +13,4 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kilua = { id = "dev.kilua", version.ref = "kilua" }
+vite-kotlin = { id = "dev.opensavvy.vite.kotlin", version.ref = "vite-kotlin" }
