Upgraded dependencies (Kotlin 2.3.10-RC, Compose 1.11.0-alpha02, Dokka 2.2.0-Beta, nmcp 1.4.4, KSP 2.3.5, npm-publish 4.1.10, Kilua RPC 0.0.42, Atomicfu 0.31.0, Serialization 1.10.0, kotlin-wrappers 20226.1.17, Jooby 4.0.15, Ktor 3.4.0, Spring Boot 4.0.2, Vert.x 5.0.7, ktml 0.1.13, logback 1.5.27, mini-css-extract-plugin 2.10.0, motion 12.29.2, Gradle 9.3.1)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,33 +1,33 @@
 [versions]
 kilua = "0.0.31"
 kilua-published = "0.0.31"
-kotlin = "2.3.0"
-compose = "1.11.0-alpha01"
-dokka = "2.1.0"
-nmcp = "1.4.3"
-ksp = "2.3.4"
+kotlin = "2.3.10-RC"
+compose = "1.11.0-alpha02"
+dokka = "2.2.0-Beta"
+nmcp = "1.4.4"
+ksp = "2.3.5"
 detekt = "1.23.8"
-npm-publish = "4.1.8"
+npm-publish = "4.1.10"
 gradle-plugin-publish = "2.0.0"
-kilua-rpc = "0.0.41"
+kilua-rpc = "0.0.42"
 kilua-gettext = "0.0.2"
-kotlinx-atomicfu = "0.29.0"
+kotlinx-atomicfu = "0.31.0"
 kotlinx-coroutines = "1.10.2"
-kotlinx-serialization = "1.10.0-RC"
+kotlinx-serialization = "1.10.0"
 kotlinx-datetime = "0.7.1"
-wrappers = "2026.1.4"
+wrappers = "2026.1.17"
 javalin = "6.7.0"
-jooby = "4.0.13"
-ktor = "3.3.3"
+jooby = "4.0.15"
+ktor = "3.4.0"
 koin = "4.1.1"
 koin-annotations = "2.3.1"
 micronaut = "4.10.7"
 micronaut-plugins = "4.6.1"
-spring-boot = "4.0.1"
-vertx = "5.0.6"
+spring-boot = "4.0.2"
+vertx = "5.0.7"
 ballast = "5.0.1"
-ktml = "0.1.12"
-logback = "1.5.24"
+ktml = "0.1.13"
+logback = "1.5.27"
 tomlj = "1.1.1"
 kaml = "0.104.0"
 resources-optimizer = "2.7.5"
@@ -54,8 +54,8 @@ postcss = "8.5.6"
 postcss-loader = "8.2.0"
 tailwindcss = "4.1.18"
 cssnano = "7.1.2"
-mini-css-extract-plugin = "2.9.4"
-motion = "12.25.0"
+mini-css-extract-plugin = "2.10.0"
+motion = "12.29.2"
 leaflet = "2.0.0-alpha.1"
 
 [libraries]
